CAU/cau-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cau-deploy
  namespace: apps
  uid: d3ff0ba6-4293-4720-b613-9de65189f572
  resourceVersion: '2677365003'
  generation: 1
  creationTimestamp: '2024-02-20T14:18:51Z'
  labels:
    app: cau
  annotations:
    deployment.kubernetes.io/revision: '1'
    kubectl.kubernetes.io/last-applied-configuration: >
      {"apiVersion":"apps/v1","kind":"Deployment","metadata":{"annotations":{},"labels":{"app":"cau"},"name":"cau-deploy","namespace":"apps"},"spec":{"replicas":1,"selector":{"matchLabels":{"app":"cau"}},"template":{"metadata":{"labels":{"app":"cau"}},"spec":{"containers":[{"envFrom":[{"configMapRef":{"name":"cau-config"}},{"secretRef":{"name":"cau-secret"}}],"image":"git.trt21.redejt:5050/sesif/cau:5.3b3","imagePullPolicy":"Always","name":"cau","ports":[{"containerPort":8080,"protocol":"TCP"}], [...]
  managedFields:
    - manager: kubectl-client-side-apply
      operation: Update
      apiVersion: apps/v1
      time: '2024-02-20T14:18:51Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            .: {}
            f:kubectl.kubernetes.io/last-applied-configuration: {}
          f:labels:
            .: {}
            f:app: {}
        f:spec:
          f:progressDeadlineSeconds: {}
          f:replicas: {}
          f:revisionHistoryLimit: {}
          f:selector: {}
          f:strategy:
            f:rollingUpdate:
              .: {}
              f:maxSurge: {}
              f:maxUnavailable: {}
            f:type: {}
          f:template:
            f:metadata:
              f:labels:
                .: {}
                f:app: {}
            f:spec:
              f:containers:
                k:{"name":"cau"}:
                  .: {}
                  f:envFrom: {}
                  f:image: {}
                  f:imagePullPolicy: {}
                  f:name: {}
                  f:ports:
                    .: {}
                    k:{"containerPort":8080,"protocol":"TCP"}:
                      .: {}
                      f:containerPort: {}
                      f:protocol: {}
                  f:resources: {}
                  f:terminationMessagePath: {}
                  f:terminationMessagePolicy: {}
                  f:volumeMounts:
                    .: {}
                    k:{"mountPath":"/opt/jboss/wildfly/aplicacaojt.keystore"}:
                      .: {}
                      f:mountPath: {}
                      f:name: {}
                      f:subPath: {}
              f:dnsPolicy: {}
              f:imagePullSecrets:
                .: {}
                k:{"name":"git-trt21-secret"}: {}
              f:nodeSelector: {}
              f:restartPolicy: {}
              f:schedulerName: {}
              f:securityContext: {}
              f:terminationGracePeriodSeconds: {}
              f:volumes:
                .: {}
                k:{"name":"volume-1"}:
                  .: {}
                  f:configMap:
                    .: {}
                    f:defaultMode: {}
                    f:items: {}
                    f:name: {}
                  f:name: {}
    - manager: kube-controller-manager
      operation: Update
      apiVersion: apps/v1
      time: '2024-04-13T17:03:39Z'
      fieldsType: FieldsV1
      fieldsV1:
        f:metadata:
          f:annotations:
            f:deployment.kubernetes.io/revision: {}
        f:status:
          f:availableReplicas: {}
          f:conditions:
            .: {}
            k:{"type":"Available"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
            k:{"type":"Progressing"}:
              .: {}
              f:lastTransitionTime: {}
              f:lastUpdateTime: {}
              f:message: {}
              f:reason: {}
              f:status: {}
              f:type: {}
          f:observedGeneration: {}
          f:readyReplicas: {}
          f:replicas: {}
          f:updatedReplicas: {}
      subresource: status
  selfLink: /apis/apps/v1/namespaces/apps/deployments/cau-deploy
status:
  observedGeneration: 1
  replicas: 1
  updatedReplicas: 1
  readyReplicas: 1
  availableReplicas: 1
  conditions:
    - type: Progressing
      status: 'True'
      lastUpdateTime: '2024-02-20T14:18:59Z'
      lastTransitionTime: '2024-02-20T14:18:51Z'
      reason: NewReplicaSetAvailable
      message: ReplicaSet "cau-deploy-9997f7699" has successfully progressed.
    - type: Available
      status: 'True'
      lastUpdateTime: '2024-04-13T17:03:39Z'
      lastTransitionTime: '2024-04-13T17:03:39Z'
      reason: MinimumReplicasAvailable
      message: Deployment has minimum availability.
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cau
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: cau
    spec:
      volumes:
        - name: volume-1
          configMap:
            name: truststore
            items:
              - key: aplicacaojt.keystore
                path: aplicacaojt.keystore
            defaultMode: 420
      containers:
        - name: cau
          image: git.trt21.redejt:5050/sesif/cau:5.3b3
          ports:
            - containerPort: 8080
              protocol: TCP
          resources: {}
          volumeMounts:
            - name: volume-1
              mountPath: /opt/jboss/wildfly/aplicacaojt.keystore
              subPath: aplicacaojt.keystore
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: Always
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        adm: 'true'
      securityContext: {}
      imagePullSecrets:
        - name: git-trt21-secret
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
